--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,33 @@
     </div>
   </header>
   <main>
-    <div class="">
-      <p>I am the conatcst page</p>
-      <p>need a conatct form here!</p>
+    <!--This is a cut and past of code from https://www.w3schools.com/howto/howto_css_contact_form.asp -->
+      <div class="container">
+  <form action="action_page.php">
+
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+    <label for="Email">Email</label>
+    <input type="text" id="Email" name="Email" placeholder="Your email..">
+    
+    <label for="country">Country</label>
+    <select id="country" name="country">
+      <option value="Republic of Ireland">Republic of Ireland</option>
+      <option value="United Kindom">United Kindom</option>
+      <option value="USA">USA</option>
+    </select>
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:140px"></textarea>
+
+    <input type="submit" value="Submit">
+
+  </form>
+</div>
     </div>
   </main>
   <footer>
